--- a/coc-settings.json
+++ b/coc-settings.json
@@ -2,5 +2,7 @@
     "suggest.autoTrigger": "none",
     "suggest.maxPreviewWidth": 40,
     "suggest.labelMaxLength": 40,
-    "suggest.noselect": false
+    "suggest.noselect": false,
+
+    "explorer.icon.enableNerdfont": true
 }
