Изменил ширину по умолчанию для coc-explorer

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -5,6 +5,7 @@
     "suggest.noselect": false,
 
     "explorer.icon.enableNerdfont": true,
+    "explorer.width": 30,
 
     "git.addedSign.hlGroup": "Title",
     "git.changedSign.hlGroup": "WarningMsg",
