--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,6 @@
 {
+    "clangd.arguments": ["-header-insertion=never"],
+
     "suggest.autoTrigger": "none",
     "suggest.maxPreviewWidth": 40,
     "suggest.labelMaxLength": 40,
