--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,5 @@
 {
+    "coc.preferences.semanticTokensHighlights": false,
     "clangd.arguments": ["-header-insertion=never"],
 
     "suggest.autoTrigger": "none",
