--- a/coc-settings.json
+++ b/coc-settings.json
@@ -8,6 +8,7 @@
     "suggest.noselect": false,
 
     "explorer.icon.enableNerdfont": true,
+    "explorer.width": 50,
 
     "git.addedSign.hlGroup": "Title",
     "git.changedSign.hlGroup": "WarningMsg",
